# libguestfs

./: .gitignore  Makefile.am  bootstrap  configure.ac  run.in
.github/workflows/: main.yml
appliance/: Makefile.am  init  packagelist.in
builder/: builder.ml
common/mlstdutils/: guestfs_config.ml.in  guestfs_config.mli
common/mlutils/: c_utils-c.c  c_utils.ml  c_utils.mli
common/qemuopts/: qemuopts.c
daemon/: Makefile.am  blkid.c  blkid.ml  btrfs.c  btrfs.ml  btrfs.mli  chroot.ml  chroot.mli  cmdline.ml  cmdline.mli  daemon-c.c  daemon.h  daemon.ml  daemon.mli  device-name-translation.c  devsparts.c  devsparts.ml  disk-labels.c  file.c  file.ml  filearch.ml  guestfs-inspection.pod  guestfsd.c  inspect.ml  inspect_fs_unix.ml  inspect_fs_windows.ml  inspect_types.ml  inspect_types.mli  inspection.ml  inspection_fs.ml  inspection_fs.mli  inspection_fs_cd.ml  inspection_fs_cd.mli  inspection_fs_unix.ml  inspection_fs_unix.mli  inspection_fs_windows.ml  inspection_fs_windows.mli  inspection_types.ml  inspection_types.mli  is.ml  (+25 more)
docs/: C_SOURCE_FILES  guestfs-building.pod  guestfs-hacking.pod
fish/: guestfish.pod
generator/: Makefile.am  OCaml.ml  OCaml.mli  actions.ml  actions_core.ml  actions_inspection.ml  c.ml  daemon.ml  daemon.mli  fish.ml  future.ml  future.mli  live_protocol.ml  live_protocol.mli  main.ml  perl.ml  proc_nr.ml  ruby.ml  rules_compiler.ml  rules_compiler.mli  rules_parser.mly  rules_scanner.mll  structs.ml  types.ml  utils.ml  utils.mli
gobject/: Makefile.inc
inspection/: Makefile.am  detect.c  facts.c  guestfs-inspection.pod  inspection.c  inspection.h  inspection.rules  match.c  mount.c  rules.h  stringsbuf.c  stringsbuf.h  test-harness.c  test1.rules  test2.rules  utils.c
inspector/: inspector.c
java/: Makefile.inc
java/com/redhat/et/libguestfs/: .gitignore
lib/: Makefile.am  appliance-kcmdline.c  appliance-uuid.c  command.c  create.c  dbdump.c  drives.c  guestfs-internal-all.h  guestfs-internal.h  guestfs.pod  handle.c  info.c  inspect-apps.c  launch-direct.c  launch-libvirt.c  launch-uml.c  launch.c
live/: Makefile.am  conversion.c  live.h  main.c
m4/: guestfs-progs.m4  guestfs-qemu.m4  guestfs_appliance.m4  guestfs_lkl.m4  guestfs_ocaml.m4
mldrivers/: linux_bootloaders.ml
mllib/: Makefile.am  common_utils.ml  common_utils.mli
po/: POTFILES  POTFILES-ml
po-docs/: language.mk
resize/: Makefile.am  cmdline.ml  cmdline.mli  resize.ml
scripts/: code-format.pl
sparsify/: Makefile.am
src/: Makefile.am  drives.c  guestfs-internal.h  guestfs.pod  launch-direct.c  launch-libvirt.c  launch-lkl.c  launch-uml.c  launch-unix.c  launch.c
test-data/fake-virtio-win/cd/Balloon/2k12/amd64/: balloon.inf
test-data/fake-virtio-win/cd/Balloon/2k8R2/amd64/: balloon.inf
test-data/fake-virtio-win/cd/Balloon/w7/x86/: balloon.inf
test-data/fake-virtio-win/cd/Balloon/w8/x86/: balloon.inf
test-data/fake-virtio-win/cd/NetKVM/w7/x86/: netkvm.inf
test-data/fake-virtio-win/cd/NetKVM/w8.1/amd64/: netkvm.inf
test-data/fake-virtio-win/cd/NetKVM/w8/x86/: netkvm.inf
test-data/fake-virtio-win/cd/qemupciserial/: qemupciserial.inf
test-data/fake-virtio-win/cd/viorng/2k12/amd64/: viorng.inf
test-data/fake-virtio-win/cd/viorng/2k8/amd64/: viorng.inf
test-data/fake-virtio-win/cd/viorng/2k8/x86/: viorng.inf
test-data/fake-virtio-win/cd/viorng/2k8R2/amd64/: viorng.inf
test-data/fake-virtio-win/cd/viorng/w7/x86/: viorng.inf
test-data/fake-virtio-win/cd/viorng/w8/x86/: viorng.inf
test-data/fake-virtio-win/cd/vioscsi/2k12R2/amd64/: vioscsi.inf
test-data/fake-virtio-win/cd/vioserial/w8.1/amd64/: vioser.inf
test-data/fake-virtio-win/cd/vioserial/w8/x86/: vioser.inf
test-data/fake-virtio-win/cd/viostor/2k12R2/amd64/: viostor.inf
test-data/fake-virtio-win/cd/viostor/w8/x86/: viostor.inf
test-data/fake-virtio-win/drivers/amd64/Win2008/: netkvm.inf
test-data/fake-virtio-win/drivers/amd64/Win2008R2/: vioscsi.inf  viostor.inf
test-data/fake-virtio-win/drivers/amd64/Win7/: netkvm.inf
test-data/fake-virtio-win/drivers/i386/Win2008/: netkvm.inf  vioscsi.inf
test-data/fake-virtio-win/drivers/i386/Win7/: qxl.inf  viostor.inf
test-data/fake-virtio-win/drivers/i386/Win8.1/: vioscsi.inf
tests/daemon/: Makefile.am
tests/disks/: test-add-lots-of-disks.sh  test-qemu-drive-libvirt.sh
tests/guests/guest-aux/: make-windows-img.sh
v2v/: Makefile.am  cmdline.ml  convert_linux.ml  convert_windows.ml  copy_to_local.ml  create_libvirt_xml.ml  input_libvirt_vcenter_https.ml  input_libvirt_vddk.ml  input_live.ml  input_live.mli  live.ml  live.mli  output_glance.ml  output_qemu.ml  output_rhv.ml  output_vdsm.ml  utils.ml  v2v-slow-unit-tests.sh  v2v.ml  v2v_slow_unit_tests.ml  v2v_unit_tests.ml  vCenter.ml  virt-v2v.pod  windows.ml  windows.mli  windows_inf.ml  windows_inf.mli
